<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/tableWithInterfaces"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:stretchColumns="0,1">
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">
                <ImageView
                    android:id="@+id/chooseImage"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/addimage"
                    android:onClick="onClickChooseImage"
                    android:background="@null"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/rotate"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nameBtnRotate"
                        android:onClick="onClickRotate"
                        android:enabled="true"/>
                    <Button
                        android:id="@+id/invertColors"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nameBtnInvertColors"
                        android:onClick="onClickInvertColors"
                        android:enabled="true"/>
                    <Button
                        android:id="@+id/mirror"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nameBtnMirror"
                        android:onClick="onClickMirror"
                        android:enabled="true"/>
                    <Button
                        android:id="@+id/exif"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exif"
                        android:onClick="onClickGetExif"
                        android:enabled="true"/>
                </LinearLayout>
            </TableRow>

        </TableLayout>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/textLabelResults"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/default_top_padding"/>

        <TableLayout
            android:id="@+id/tableWithResults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:stretchColumns="0">


        </TableLayout>
    </LinearLayout>
</ScrollView>